# sqnice

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
include/sqlite3pp/: base.hh  blob_stream.hh  database.hh  query.hh  sqlite3pp.hh  sqlite3ppext.hh  transaction.hh
include/sqnice/: base.hh  blob_stream.hh  database.hh  ext.hh  functions.hh  pool.hh  query.hh  sqnice.hh  statement_cache.hh  transaction.hh
src/: base.cc  blob_stream.cc  database.cc  ext.cc  functions.cc  pool.cc  query.cc  sqlite3pp.cc  sqlite3pp.cpp  sqlite3pp.h  sqlite3pp.hh  sqlite3ppext.cc  sqlite3ppext.cpp  sqlite3ppext.h  transaction.cc
test/: catch.hpp  sqnice_test.hh  test.h  testaggregate.cpp  testattach.cpp  testbackup.cpp  testcallback.cpp  testdb.cc  testdb.cpp  testdisconnect.cpp  testfunction.cpp  testfunctions.cc  testinsert.cpp  testinsertall.cpp  testquery.cc  testselect.cpp
